# trap-the-mouse

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs  types.rs
client/src/commands/: error.rs  mod.rs
client/src/commands/command_handlers/: become_role.rs  change_name.rs  clear.rs  close_lobby.rs  connect.rs  create_lobby.rs  delete_lobby.rs  disconnect.rs  get_lobbies.rs  get_lobby_state.rs  join_lobby.rs  leave_lobby.rs  make_host.rs  make_move.rs  mod.rs  ping.rs  start_game.rs
client/src/events/: error.rs  event_loop.rs  mod.rs
client/src/events/event_handlers/: became_host.rs  became_role.rs  lobby_closing.rs  mod.rs  player_joined.rs  (+1 more)
client_gui/: Cargo.toml
client_gui/src/: main.rs  types.rs
client_gui/src/commands/: error.rs  mod.rs
client_gui/src/events/: event_loop.rs  mod.rs
network/: Cargo.toml
network/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
server/src/core/: game.rs  lobby.rs  mod.rs  server.rs  types.rs
server/src/core/db/: mod.rs  models.rs
server/src/core/request_handlers/: create_lobby.rs  delete_lobby.rs  error.rs  exit.rs  get_lobbies.rs  invalid.rs  mod.rs  ping.rs
server/src/core/request_handlers/lobby/: become_role.rs  changed_name.rs  close_lobby.rs  get_lobby_state.rs  join_lobby.rs  leave_lobby.rs  main.rs  make_host.rs  make_move.rs  mod.rs  send_message.rs  start_game.rs
server/src/core/request_handlers/server/: change_name.rs  connect.rs  create_lobby.rs  delete_lobby.rs  disconnect.rs  get_lobbies.rs  mod.rs
server/src/server/: lobby_server.rs  main_server.rs  mod.rs
(+52 files in other folders)
