[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
thiserror = "1.0"

ctrlc = "3.4"                       # handle ctrl c signal for graceful shutdown
rusqlite = "0.30.0"                 # database
r2d2 = "0.8.10"                     # database connection pool
r2d2_sqlite = "0.23.0"              # database connection pool for sqlite

bincode = "1.3.3"
serde = "1"
serde_derive = "1"

network = { path = "../network" }
